# ai-agent-template

./: .env.example  .gitignore  README.md  env.py  graph.py  langgraph.json  main.py  pyproject.toml  ui.py
agents/: chat_agent.py
agents/demo/: .env.example  env.py  langchain_agent.py  langgraph.json
agents/web_search_agent/: .env.example  env.py  langchain_agent.py  langgraph.json
deprecated/: chat_agent.py  graph.py  langfuse.py  ui.py
models/: schema.py
models/openai/: langchain.py  pydantic_ai.py
tools/: math.py
utils/: langfuse.py  message.py  model.py
