[project]
name = "ai-agent-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langgraph>=0.6.5",
    "pydantic-ai-slim[openai]>=0.7.2",
    "streamlit>=1.48.1",
    "streamlit-chatbox>=1.1.13.post1",
]
