[project]
name = "ai-agent-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langfuse>=3.3.0",
    "langgraph>=0.6.5",
    "pydantic-ai-slim[openai]>=0.7.2",
    "pydantic-settings>=2.10.1",
    "streamlit>=1.48.1",
    "streamlit-chatbox>=1.1.13.post1",
]
