[project]
name = "ai-agent-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=1.1.0",
    "langfuse>=3.10.0",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
    "pydantic-ai-slim[openai]>=1.24.0",
    "pydantic-settings>=2.10.1",
    "streamlit>=1.48.1",
    "streamlit-chatbox>=1.1.13.post1",
]
